workloads/fbs/ing-fbs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-fbs
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-fbs
            port:
              number: 4000
